tests/baselines/reference/dottedModuleName.errors.txt
dottedModuleName.ts(3,29): error TS1144: '{' or ';' expected.
dottedModuleName.ts(3,33): error TS2552: Cannot find name 'x'. Did you mean 'X'?
dottedModuleName.ts(4,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
dottedModuleName.ts(4,18): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
dottedModuleName.ts(4,20): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
dottedModuleName.ts(12,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
dottedModuleName.ts(12,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
dottedModuleName.ts(14,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
dottedModuleName.ts(14,18): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== dottedModuleName.ts (9 errors) ====
    namespace M {
        export namespace N {
    	export function f(x:number)=>2*x;
    	                           ~~
!!! error TS1144: '{' or ';' expected.
    	                               ~
!!! error TS2552: Cannot find name 'x'. Did you mean 'X'?
    	export module X.Y.Z {
    	       ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	                ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	                  ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	    export var v2=f(v);
    	}
        }
    }
    
    
    
    module M.N {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export namespace X {
    	export module Y.Z {
    	       ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	                ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	    export var v=f(10);
    	}
        }
    }
    